# RMHero

./: CMakeLists.txt  gripper.txt
0_Gimbal/: CMakeLists.txt
0_Gimbal/dev/: Makefile  calibrate_sensor.c  canBusProcess.c  dbus.c  exti.c  feeder.c  gimbal (copy).c  gimbal.c  main.c  math_misc.c  mcuconf.h  preload.c  shellcfg.c  shoot_pwm.c  shooter.c  system_error.c
0_Gimbal/dev/inc/: adis16470.h  attitude.h  canBusProcess.h  dbus.h  feeder.h  gimbal.h  main.h  math_misc.h  preload.h  shoot.h
5_task/: auto_fetch_task.c
5_task/inc/: auto_fetch_task.h
dev/: HeroPWM.c  Makefile  barrelStatus.c  canBusProcess.c  chassis.c  custom_data.c  exti.c  hero_gripper.c  keyboard.c  main.c  shellcfg.c  shooter_rm3508.c
dev/inc/: HeroPWM.h  barrelStatus.h  canBusProcess.h  chassis.h  hero_gripper.h  keyboard.h  main.h
hw/: board.h
